product_docs/docs/efm/4.1/efm_user/04_configuring_efm/01_cluster_properties/index.mdx
---
title: "The Cluster Properties File"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-failover-manager/user-guides/user-guide/4.1/cluster_properties.html"
---

<div id="cluster_properties" class="registered_link"></div>

Each node in a Failover Manager cluster has a properties file (by default, named `efm.properties`) that contains the properties of the individual node on which it resides. The Failover Manager installer creates a file template for the properties file named `efm.properties.in` in the `/etc/edb/efm-4.1` directory.

After completing the Failover Manager installation, you must make a working copy of the template before modifying the file contents:

```text
# cp /etc/edb/efm-4.1/efm.properties.in /etc/edb/efm-4.1/efm.properties
```

After copying the template file, change the owner of the file to `efm`:

```text
# chown efm:efm efm.properties
```

!!! Note
    By default, Failover Manager expects the cluster properties file to be named `efm.properties`. If you name the properties file something other than `efm.properties`, you must modify the service script or unit file to instruct Failover Manager to use a different name.

After creating the cluster properties file, add (or modify) configuration parameter values as required. For detailed information about each property, see [Specifying Cluster Properties](#specifying-cluster-properties).

The property files are owned by `root`. The Failover Manager service script expects to find the files in the `/etc/edb/efm-4.1 directory`. If you move the property file to another location, you must create a symbolic link that specifies the new location.

!!! Note
    All user scripts referenced in the properties file will be invoked as the Failover Manager user.

<div id="specifying_cluster_properties" class="registered_link"></div>

## Specifying Cluster Properties

You can use the properties listed in the cluster properties file to specify connection properties and behaviors for your Failover Manager cluster. Modifications to property settings will be applied when Failover Manager starts. If you modify a property value you must restart Failover Manager to apply the changes.

Property values are case-sensitive. Note that while Postgres uses quoted strings in parameter values, Failover Manager does not allow quoted strings in property values. For example, while you might specify an IP address in a Postgres configuration parameter as:

> `listen_addresses='192.168.2.47'`

Failover Manager requires that the value *not* be enclosed in quotes:

> `bind.address=192.168.2.54:7800`

Use the properties in the `efm.properties` file to specify connection, administrative, and operational details for Failover Manager.

**Legends**: In the following table:

-   `A`: Required on Primary or Standby node
-   `W`: Required on Witness node
-   `Y` : Yes

| **Property Name**                                             | **A** | **W** | **Default Value**                     | **Comments**                                                                                                                                                   |
| ------------------------------------------------------------- | ----- | ----- | ------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [db.user](#db_user)                                           | Y     | Y     |                                       | Username for the database                                                                                                                                      |
| [db.password.encrypted](#db_password_encrypted)               | Y     | Y     |                                       | Password encrypted using 'efm encrypt'                                                                                                                         |
| [db.port](#db_port)                                           | Y     | Y     |                                       | This value must be same for all the agents                                                                                                                     |
| [db.database](#db_database)                                   | Y     | Y     |                                       | Database name                                                                                                                                                  |
| [db.service.owner](#db_service_owner)                         | Y     |       |                                       | Owner of $PGDATA dir for db.database                                                                                                                           |
| [db.service.name](#db_service_name)                           |       |       |                                       | Required if running the database as a service                                                                                                                  |
| [db.bin](#db_bin)                                             | Y     |       |                                       | Directory containing the pg_controldata/pg_ctl commands such as '/usr/edb/as12/bin'                                                                            |
| [db.data.dir](#db_data_dir)                                   | Y     |       |                                       | Same as the output of query 'show data_directory;'                                                                                                             |
| [db.config.dir](#db_config_dir)                               |       |       |                                       | Same as the output of query 'show config_file;'. Should be specified if it is not same as *db.data.dir*                                                        |
| [jdbc.sslmode](#jdbc_sslmode)                                 | Y     | Y     | disable                               | See the [note](#jdbc_note)                                                                                                                                     |
| [user.email](#user_email)                                     |       |       |                                       | This value must be same for all the agents; can be left blank if using a notification script                                                                   |
| [from.email](#from_email)                                     |       |       | [efm@localhost](mailto:efm@localhost) | Leave blank to use the default [efm@localhost](mailto:efm@localhost)                                                                                           |
| [notification.level](#notification_level)                     | Y     | Y     | INFO                                  | See the [list of notifications](../../10_notifications/#notifications)                                                                                         |
| [notification.text.prefix](#notification_text_prefix)         |       |       |                                       |                                                                                                                                                                |
| [script.notification](#script_notification)                   |       |       |                                       | Required if user.email property is not used; both parameters can be used together                                                                              |
| [bind.address](#bind_address)                                 | Y     | Y     |                                       | Example: &lt;ip_address>:&lt;port>                                                                                                                             |
| [external.address](#external_address)                         |       |       |                                       | Example: &lt;ip_address/hostname>                                                                                                                              |
| [admin.port](#admin_port)                                     | Y     | Y     | 7809                                  | Modify if the default port is already in use                                                                                                                   |
| [is.witness](#is_witness)                                     | Y     | Y     |                                       | See description                                                                                                                                                |
| [local.period](#local_period)                                 | Y     |       | 10                                    |                                                                                                                                                                |
| [local.timeout](#local_timeout)                               | Y     |       | 60                                    |                                                                                                                                                                |
| [local.timeout.final](#local_timeout_final)                   | Y     |       | 10                                    |                                                                                                                                                                |
| [remote.timeout](#remote_timeout)                             | Y     | Y     | 10                                    |                                                                                                                                                                |
| [node.timeout](#node_timeout)                                 | Y     | Y     | 50                                    | This value must be same for all the agents                                                                                                                     |
| [encrypt.agent.messages](#encrypt_agent_messages)             | Y     | Y     | false                                 | This value must be same for all the agents                                                                                                                     |
| [stop.isolated.primary](#stop_isolated_primary)               | Y     |       | true                                  |                                                                                                                                                                |
| [stop.failed.primary](#stop_failed_primary)                   | Y     |       | true                                  |                                                                                                                                                                |
| [primary.shutdown.as.failure](#primary_shutdown_as_failure)   | Y     | Y     | false                                 |                                                                                                                                                                |
| [update.physical.slots.period](#update_physical_slots_period) | Y     |       | 0                                     |                                                                                                                                                                |
| [ping.server.ip](#ping_server_ip)                             | Y     | Y     | 8.8.8.8                               |                                                                                                                                                                |
| [ping.server.command](#ping_server_command)                   | Y     | Y     | /bin/ping -q -c3 -w5                  |                                                                                                                                                                |
| [auto.allow.hosts](#auto_allow_hosts)                         | Y     | Y     | false                                 |                                                                                                                                                                |
| [stable.nodes.file](#stable_nodes_file)                       | Y     | Y     | false                                 |                                                                                                                                                                |
| [db.reuse.connection.count](#db_reuse_connection_count)       | Y     |       | 0                                     |                                                                                                                                                                |
| [auto.failover](#auto_failover)                               | Y     | Y     | true                                  |                                                                                                                                                                |
| [auto.reconfigure](#auto_reconfigure)                         | Y     |       | true                                  | This value must be same for all the agents                                                                                                                     |
| [promotable](#promotable)                                     | Y     |       | true                                  |                                                                                                                                                                |
| [use.replay.tiebreaker](#use_replay_tiebreaker)               | Y     | Y     | true                                  | This value must be same for all the agents                                                                                                                     |
| [standby.restart.delay](#standby_restart_delay)               |       |       | 0                                     |                                                                                                                                                                |
| [application.name](#application_name)                         |       |       |                                       | Set to replace the application_name portion of the primary_conninfo entry with this property value before starting the original primary database as a standby. |
| [restore.command](#restore_command)                           |       |       |                                       | Example: restore.command=scp &lt;db_service_owner>@%h: &lt;archive_path>/%f %p                                                                                 |
| [reconfigure.num.sync](#reconfigure_num_sync)                 | Y     |       | false                                 |                                                                                                                                                                |
| [reconfigure.num.sync.max](#reconfigure_num_sync_max)         |       |       |                                       |                                                                                                                                                                |
| [reconfigure.sync.primary](#reconfigure_sync_primary)         | Y     |       | false                                 |                                                                                                                                                                |
| [minimum.standbys](#minimum_standbys)                         | Y     | Y     | 0                                     | This value must be same for all the nodes                                                                                                                      |
| [recovery.check.period](#recovery_check_period)               | Y     |       | 1                                     |                                                                                                                                                                |
| [restart.connection.timeout](#restart_connection_timeout)     |       |       | 60                                    |                                                                                                                                                                |
| [auto.resume.period](#auto_resume_period)                     | Y     |       | 0                                     |                                                                                                                                                                |
| [virtual.ip](#virtual_ip)                                     |       |       | (see virtual.ip.single)               | Leave blank if you do not specify a VIP                                                                                                                        |
| [virtual.ip.interface](#virtual_ip)                           |       |       |                                       | Required if you specify a VIP                                                                                                                                  |
| [virtual.ip.prefix](#virtual_ip)                              |       |       |                                       | Required if you specify a VIP                                                                                                                                  |
| [virtual.ip.single](#virtual_ip)                              | Y     | Y     | Yes                                   | This value must be same for all the nodes                                                                                                                      |
| [check.vip.before.promotion](#check_vip_before_promotion)     | Y     | Y     | Yes                                   |                                                                                                                                                                |
| [pgpool.enable](#pgpool_enable)                               |       |       | false                                 |                                                                                                                                                                |
| [pcp.user](#pgpool_enable)                                    |       |       |                                       | Required if pgpool.enable is set to true                                                                                                                       |
| [pcp.host](#pgpool_enable)                                    |       |       |                                       | Required if pgpool.enable is set to true, this value must be same for all the agents                                                                           |
| [pcp.port](#pgpool_enable)                                    |       |       |                                       | Required if pgpool.enable is set to true, this value must be same for all the agents                                                                           |
| [pcp.pass.file](#pgpool_enable)                               |       |       |                                       | Required if pgpool.enable is set to true                                                                                                                       |
| [pgpool.bin](#pgpool_enable)                                  |       |       |                                       | Required if pgpool.enable is set to true                                                                                                                       |
| [script.load.balancer.attach](#script_load_balancer)          |       |       |                                       | Example: script.load.balancer.attach= /&lt;path>/&lt;attach_script> %h %t                                                                                      |
| [script.load.balancer.detach](#script_load_balancer)          |       |       |                                       | Example: script.load.balancer.detach= /&lt;path>/&lt;detach_script> %h %t                                                                                      |
| [script.fence](#script_fence)                                 |       |       |                                       | Example: script.fence= /&lt;path>/&lt;script_name> %p %f                                                                                                       |
| [script.post.promotion](#script_post_promotion)               |       |       |                                       | Example: script.post.promotion= /&lt;path>/&lt;script_name> %f %p                                                                                              |
| [script.resumed](#script_resumed)                             |       |       |                                       | Example: script.resumed= /&lt;path>/&lt;script_name>                                                                                                           |
| [script.db.failure](#script_db_failure)                       |       |       |                                       | Example: script.db.failure= /&lt;path>/&lt;script_name>                                                                                                        |
| [script.primary.isolated](#script_primary_isolated)           |       |       |                                       | Example: script.primary.isolated= /&lt;path>/&lt;script_name>                                                                                                  |
| [script.remote.pre.promotion](#script_remote_pre_promotion)   |       |       |                                       | Example: script.remote.pre.promotion= /&lt;path>/&lt;script_name> %p                                                                                           |
| [script.remote.post.promotion](#script_remote_post_promotion) |       |       |                                       | Example: script.remote.post.promotion= /&lt;path>/&lt;script_name> %p                                                                                          |
| [script.custom.monitor](#script_custom_monitor)               |       |       |                                       | Example: script.custom.monitor= /&lt;path>/&lt;script_name>                                                                                                    |
| [custom.monitor.interval](#script_custom_monitor)             |       |       |                                       | Required if a custom monitoring script is specified                                                                                                            |
| [custom.monitor.timeout](#script_custom_monitor)              |       |       |                                       | Required if a custom monitoring script is specified                                                                                                            |
| [custom.monitor.safe.mode](#script_custom_monitor)            |       |       |                                       | Required if a custom monitoring script is specified                                                                                                            |
| [sudo.command](#sudo_command)                                 | Y     | Y     | sudo                                  |                                                                                                                                                                |
| [sudo.user.command](#sudo_command)                            | Y     | Y     | sudo -u %u                            |                                                                                                                                                                |
| [lock.dir](#lock_dir)                                         |       |       |                                       | If not specified, defaults to '/var/lock/efm-&lt;version>'                                                                                                     |
| [log.dir](#log_dir)                                           |       |       |                                       | If not specified, defaults to '/var/log/efm-&lt;version>'                                                                                                      |
| [syslog.host](#syslog_logging)                                |       |       | localhost                             |                                                                                                                                                                |
| [syslog.port](#syslog_logging)                                |       |       | 514                                   |                                                                                                                                                                |
| [syslog.protocol](#syslog_logging)                            |       |       |                                       |                                                                                                                                                                |
| [syslog.facility](#syslog_logging)                            |       |       | UDP                                   |                                                                                                                                                                |
| [file.log.enabled](#logtype_enabled)                          | Y     | Y     | true                                  |                                                                                                                                                                |
| [syslog.enabled](#logtype_enabled)                            | Y     | Y     | false                                 |                                                                                                                                                                |
| [jgroups.loglevel](#loglevel)                                 |       |       | info                                  |                                                                                                                                                                |
| [efm.loglevel](#loglevel)                                     |       |       | info                                  |                                                                                                                                                                |
| [jvm.options](#jvm_options)                                   |       |       | -Xmx128m                              |                                                                                                                                                                |

**Cluster Properties**

<div id="db_user" class="registered_link"></div>

<div id="db_password_encrypted" class="registered_link"></div>

<div id="db_port" class="registered_link"></div>

<div id="db_database" class="registered_link"></div>

Use the following properties to specify connection details for the Failover Manager cluster:

```text
# The value for the password property should be the output from
# 'efm encrypt' -- do not include a cleartext password here. To
# prevent accidental sharing of passwords among clusters, the
# cluster name is incorporated into the encrypted password. If
# you change the cluster name (the name of this file), you must
# encrypt the password again with the new name.
# The db.port property must be the same for all nodes.
db.user=
db.password.encrypted=
db.port=
db.database=
```

The `db.user` specified must have sufficient privileges to invoke selected PostgreSQL commands on behalf of Failover Manager. For more information, please see [Prerequisites](../../02_failover_manager_overview/01_prerequisites/#prerequisites).

For information about encrypting the password for the database user, see [Encrypting Your Database Password](01_encrypting_database_password/#encrypting_database_password).

<div id="db_service_owner" class="registered_link"></div>

Use the `db.service.owner` property to specify the name of the operating system user that owns the cluster that is being managed by Failover Manager. This property is not required on a dedicated witness node.

```text
# This property tells EFM which OS user owns the $PGDATA dir for
# the 'db.database'. By default, the owner is either 'postgres'
# for PostgreSQL or 'enterprisedb' for EDB Postgres Advanced
# Server. However, if you have configured your db to run as a
# different user, you will need to copy the /etc/sudoers.d/efm-XX
# conf file to grant the necessary permissions to your db owner.
#
# This username must have write permission to the
# 'db.data.dir' specified below.
db.service.owner=
```

<div id="db_service_name" class="registered_link"></div>

Specify the name of the database service in the `db.service.name` property if you use the service or systemctl command when starting or stopping the service.

```text
# Specify the proper service name in order to use service commands
# rather than pg_ctl to start/stop/restart a database. For example, if
# this property is set, then 'service <name> restart' or 'systemctl
# restart <name>'
# (depending on OS version) will be used to restart the database rather
# than pg_ctl.
# This property is required if running the database as a service.
db.service.name=
```

<div id="db_bin" class="registered_link"></div>

You should use the same service control mechanism (pg_ctl, service, or systemctl) each time you start or stop the database service. If you use the `pg_ctl` program to control the service, specify the location of the `pg_ctl` program in the `db.bin` property.

```text
# Specify the directory containing the pg_controldata/pg_ctl commands,
# for example:
# /usr/edb/as11/bin. Unless the db.service.name property is used, the
# pg_ctl command is used to start/stop/restart databases as needed
# after a failover or switchover. This property is required.
db.bin=
```

<div id="db_data_dir" class="registered_link"></div>

Use the `db.data.dir` property to specify the location to which a recovery file will be written on the Primary node of the cluster during promotion. This property is required on primary and standby nodes; it is not required on a dedicated witness node.

```text
# For database version 12 and up, this is the directory where a
# standby.signal file will exist for a standby node. For previous
# versions, this is the location of the db recovery.conf file on
# the node.
# After a failover, the recovery.conf files on remaining standbys are
# changed to point to the new primary db (a copy of the original is made
# first). On a primary node, a recovery.conf file will be written during
# failover and promotion to ensure that the primary node can not be
# restarted as the primary database.
# This corresponds to database environment variable PGDATA and should
# be same as the output of query 'show data_directory;' on respective
# database.
db.data.dir=
```

<div id="db_config_dir" class="registered_link"></div>

Use the `db.config.dir` property to specify the location of database configuration files if they are not stored in the same directory as the `recovery.conf` or `standby.signal` file. This should be the value specified by the `config_file` parameter directory of your Advanced Server or PostgreSQL installation. This value will be used as the location of the Postgres `data` directory when stopping, starting, or restarting the database.

```text
# Specify the location of database configuration files if they are
# not contained in the same location as the recovery.conf or
# standby.signal file. This is most likely the case for Debian
# installations. The location specified will be used as the -D value
# (the location of the data directory for the cluster) when calling
# pg_ctl to start or stop the database. If this property is blank,
# the db.data.dir location specified by the db.data.dir property will
# be used. This corresponds to the output of query 'show config_file;'
# on respective database.
db.config.dir=
```

For more information about database configuration files, visit the [PostgreSQL website](https://www.postgresql.org/docs/current/runtime-config-file-locations.html).

<div id="jdbc_sslmode" class="registered_link"></div>

Use the `jdbc.sslmode` property to instruct Failover Manager to use SSL connections; by default, SSL is disabled.

```text
# Use the jdbc.sslmode property to enable ssl for EFM
# connections. Setting this property to anything but 'disable'
# will force the agents to use 'ssl=true' for all JDBC database
# connections (to both local and remote databases).
# Valid values are:
#
# disable - Do not use ssl for connections.
# verify-ca - EFM will perform CA verification before allowing
# the certificate.
# require - Verification will not be performed on the server
# certificate.
jdbc.sslmode=disable
```

<div id="jdbc_note" class="registered_link"></div>

!!! Note
    If you set the value of `jdbc.sslmode` to `verify-ca` and you want to use Java trust store for certificate validation, you need to set the following value:

    `jdbc.properties=sslfactory=org.postgresql.ssl.DefaultJavaSSLFactory`

For information about configuring and using SSL, please see:

> <https://www.postgresql.org/docs/current/static/ssl-tcp.html>

and

> <https://jdbc.postgresql.org/documentation/head/ssl.html>

<div id="user_email" class="registered_link"></div>

Use the `user.email` property to specify an email address (or multiple email addresses) that will receive any notifications sent by Failover Manager.

```text
# Email address(es) for notifications. The value of this
# property must be the same across all agents. Multiple email
# addresses must be separated by space. If using a notification
# script instead, this property can be left blank.
user.email=
```

<div id="from_email" class="registered_link"></div>

The `from.email` property specifies the value that will be used as the sender's address on any email notifications from Failover Manager. You can:

-   leave `from.email` blank to use the default value (`efm@localhost`).
-   specify a custom value for the email address.
-   specify a custom email address, using the `%h` placeholder to represent the name of the node host (e.g., [example@%h](mailto:example@%h)). The placeholder will be replaced with the name of the host as returned by the Linux hostname utility.

For more information about notifications, see [Notifications](../../10_notifications/#notifications).

```text
# Use the from.email property to specify the from email address that
# will be used for email notifications. Use the %h placeholder to
# represent the name of the node host (e.g. example@%h). The
# placeholder will be replaced with the name of the host as returned
# by the hostname command.
# Leave blank to use the default, efm@localhost.
from.email=
```

<div id="notification_level" class="registered_link"></div>

Use the `notification.level` property to specify the minimum severity level at which Failover Manager will send user notifications or when a notification script is called. For a complete list of notifications, please see [Notifications](../../10_notifications/#notifications).

```text
# Minimum severity level of notifications that will be sent by
# the agent. The minimum level also applies to the notification
# script (below). Valid values are INFO, WARNING, and SEVERE.
# A list of notifications is grouped by severity in the user's
# guide.
notification.level=INFO
```

<div id="notification_text_prefix" class="registered_link"></div>

Use the `notification.text.prefix` property to specify the text to be added to the beginning of every notification.

```text
# Text to add to the beginning of every notification. This could
# be used to help identify what the cluster is used for, the role
# of this node, etc. To use multiple lines, add a backslash \ to
# the end of a line of text. To include a newline use \n.
# Example:
# notification.text.prefix=Development cluster for Example dept.\n\
# Used by Dev and QA \
# See Example group for questions.
notification.text.prefix=
```

<div id="script_notification" class="registered_link"></div>

Use the `script.notification` property to specify the path to a user-supplied script that acts as a notification service; the script will be passed a message subject and a message body. The script will be invoked each time Failover Manager generates a user notification.

```text
# Absolute path to script run for user notifications.
#
# This is an optional user-supplied script that can be used for
# notifications instead of email. This is required if not using
# email notifications. Either/both can be used. The script will
# be passed two parameters: the message subject and the message
# body.
script.notification=
```

<div id="bind_address" class="registered_link"></div>

The `bind.address` property specifies the IP address and port number of the agent on the current node of the Failover Manager cluster.

```text
# This property specifies the ip address and port that jgroups
# will bind to on this node. The value is of the form
# <ip>:<port>.
# Note that the port specified here is used for communicating
# with other nodes, and is not the same as the admin.port below,
# used only to communicate with the local agent to send control
# signals.
# For example, <provide_your_ip_address_here>:7800
bind.address=
```

<div id="external_address" class="registered_link"></div>

Use the `external.address` property to specify the IP address or hostname that should be used for communication with all other Failover Manager agents in a NAT environment.

```text
# This is the ip address/hostname to be used for communication with all
# other Failover Manager agents. All traffic towards this address
# should be routed by the network to the bind.address of the node.
# The value is in the ip/hostname format only. This address will be
# used in scenarios where nodes are on different networks and broadcast
# an IP address other than the bind.address to the external world.
external.address=
```

<div id="admin_port" class="registered_link"></div>

Use the `admin.port` property to specify a port on which Failover Manager listens for administrative commands.

```text
# This property controls the port binding of the administration
# server which is used for some commands (ie cluster-status). The
# default is 7809; you can modify this value if the port is
# already in use.
admin.port=7809
```

<div id="is_witness" class="registered_link"></div>

Set the `is.witness` property to true to indicate that the current node is a witness node. If is.witness is true, the local agent will not check to see if a local database is running.

```text
# Specifies whether or not this is a witness node. Witness nodes
# do not have local databases running.
is.witness=
```

The Postgres `pg_is_in_recovery()` function is a boolean function that reports the recovery state of a database. The function returns `true` if the database is in recovery, or false if the database is not in recovery. When an agent starts, it connects to the local database and invokes the `pg_is_in_recovery()` function. If the server responds true, the agent assumes the role of standby; if the server responds false, the agent assumes the role of primary. If there is no local database, the agent will assume an idle state.

!!! Note
    If `is.witness` is `true`, Failover Manager will not check the recovery state.

<div id="local_period" class="registered_link"></div>

<div id="local_timeout" class="registered_link"></div>

<div id="local_timeout_final" class="registered_link"></div>

The following properties specify properties that apply to the local server:

-   The `local.period` property specifies how many seconds between attempts to contact the database server.
-   The `local.timeout` property specifies how long an agent will wait for a positive response from the local database server.
-   The `local.timeout.final` property specifies how long an agent will wait after the above-mentioned previous checks have failed to contact the database server on the current node. If a response is not received from the database within the number of seconds specified by the `local.timeout.final` property, the database is assumed to have failed.

For example, given the default values of these properties, a check of the local database happens once every 10 seconds. If an attempt to contact the local database does not come back positive within 60 seconds, Failover Manager makes a final attempt to contact the database. If a response is not received within 10 seconds, Failover Manager declares database failure and notifies the administrator listed in the user.email property. These properties are not required on a dedicated witness node.

```text
# These properties apply to the connection(s) EFM uses to monitor
# the local database. Every 'local.period' seconds, a database
# check is made in a background thread. If the main monitoring
# thread does not see that any checks were successful in
# 'local.timeout' seconds, then the main thread makes a final
# check with a timeout value specified by the
# 'local.timeout.final' value. All values are in seconds.
# Whether EFM uses single or multiple connections for database
# checks is controlled by the 'db.reuse.connection.count'
# property.
local.period=10
local.timeout=60
local.timeout.final=10
```

If necessary, you should modify these values to suit your business model.

<div id="remote_timeout" class="registered_link"></div>

Use the `remote.timeout` property to specify how many seconds an agent waits for a response from a remote database server (i.e., how long a standby agent waits to verify that the primary database is actually down before performing failover). The `remote.timeout` property value specifies a timeout value for agent-to-agent communication; other timeout properties in the cluster properties file specify values for agent-to-database communication.

```text
# Timeout for a call to check if a remote database is responsive.
# For example, this is how long a standby would wait for a
# DB ping request from itself and the witness to the primary DB
# before performing failover.
remote.timeout=10
```

<div id="node_timeout" class="registered_link"></div>

Use the `node.timeout` property to specify the number of seconds that an agent will wait for a response from a node when determining if a node has failed.

```text
# The total amount of time in seconds to wait before determining
# that a node has failed or been disconnected from this node.
#
# The value of this property must be the same across all agents.
node.timeout=50
```

<div id="encrypt_agent_messages" class="registered_link"></div>

Use the `encrypt.agent.messages` property to specify if the messages sent between agents should be encrypted.

```text
# Set to true to encrypt messages that are sent between agents.
# This property must be the same on all agents or else the agents
# will not be able to connect.
encrypt.agent.messages=false
```

<div id="stop_isolated_primary" class="registered_link"></div>

Use the `stop.isolated.primary` property to instruct Failover Manager to shut down the database if a primary agent detects that it is isolated. When true (the default), Failover Manager will stop the database before invoking the script specified in the `script.primary.isolated` property.

```text
# Shut down the database after a primary agent detects that it has
# been isolated from the majority of the efm cluster. If set to
# true, efm will stop the database before running the
# 'script.primary.isolated' script, if a script is specified.
stop.isolated.primary=true
```

<div id="stop_failed_primary" class="registered_link"></div>

Use the `stop.failed.primary` property to instruct Failover Manager to attempt to shut down a primary database if it can not reach the database. If `true`, Failover Manager will run the script specified in the `script.db.failure` property after attempting to shut down the database.

```text
# Attempt to shut down a failed primary database after EFM can no
# longer connect to it. This can be used for added safety in the
# case a failover is caused by a failure of the network on the
# primary node.
# If specified, a 'script.db.failure' script is run after this attempt.
stop.failed.primary=true
```

<div id="primary_shutdown_as_failure" class="registered_link"></div>

Use the `primary.shutdown.as.failure` parameter to indicate that any shutdown of the Failover Manager agent on the primary node should be treated as a failure. If this parameter is set to `true` and the primary agent stops (for any reason), the cluster will attempt to confirm if the database on the primary node is running:

-   If the database is reached, a notification will be sent informing you of the agent status.
-   If the database is not reached, a failover will occur.

```text
# Treat a primary agent shutdown as an agent failure. This can be set
# to true to treat a primary agent shutdown as a failure situation,
# e.g. during the shutdown of a node, accidental or otherwise.
# Caution should be used when using this feature, as it could
# cause an unwanted promotion in the case of performing primary
# database maintenance.
# Please see the user's guide for more information.
primary.shutdown.as.failure=false
```

The `primary.shutdown.as.failure` property is meant to catch user error, rather than failures, such as the accidental shutdown of a primary node. The proper shutdown of a node can appear to the rest of the cluster like a user has stopped the primary Failover Manager agent (for example to perform maintenance on the primary database). If you set the `primary.shutdown.as.failure` property to `true`, care must be taken when performing maintenance.

To perform maintenance on the primary database when `primary.shutdown.as.failure` is `true`, you should stop the primary agent and wait to receive a notification that the primary agent has failed but the database is still running. Then it is safe to stop the primary database. Alternatively, you can use the `efm stop-cluster` command to stop all of the agents without failure checks being performed.

<div id="update_physical_slots_period" class="registered_link"></div>

Use the `update.physical.slots.period` property to define the slot advance frequency for database version 12 and above. When `update.physical.slots.period` is set to a non-zero value, the primary agent will read the current `restart_lsn` of the physical replication slots after every `update.physical.slots.period` seconds, and send this information with its `pg_current_wal_lsn` and `primary_slot_name` (If it is set in the postgresql.conf file) to the standbys. If physical slots do not already exist, setting this parameter to a non-zero value will create the slots and then update the `restart_lsn parameter` for these slots. A non-promotable standby will not create new slots but will update them if they exist.

```text
# Period in seconds between having the primary agent update promotable
# standbys with physical replication slot information so that
# the cluster will continue to use replication slots after a failover.
# Set to zero to turn off.
update.physical.slots.period=0
```

<div id="ping_server_ip" class="registered_link"></div>

Use the `ping.server.ip` property to specify the IP address of a server that Failover Manager can use to confirm that network connectivity is not a problem.

```text
# This is the address of a well-known server that EFM can ping
# in an effort to determine network reachability issues. It
# might be the IP address of a nameserver within your corporate
# firewall or another server that *should* always be reachable
# via a 'ping' command from each of the EFM nodes.
#
# There are many reasons why this node might not be considered
# reachable: firewalls might be blocking the request, ICMP might
# be filtered out, etc.
#
# Do not use the IP address of any node in the EFM cluster
# (primary, standby, or witness) because this ping server is meant
# to provide an additional layer of information should the EFM
# nodes lose sight of each other.
#
# The installation default is Google's DNS server.
ping.server.ip=8.8.8.8
```

<div id="ping_server_command" class="registered_link"></div>

Use the `ping.server.command` property to specify the command used to test network connectivity.

```text
# This command will be used to test the reachability of certain
# nodes.
#
# Do not include an IP address or hostname on the end of
# this command - it will be added dynamically at runtime with the
# values contained in 'virtual.ip' and 'ping.server.ip'.
#
# Make sure this command returns reasonably quickly - test it
# from a shell command line first to make sure it works properly.
ping.server.command=/bin/ping -q -c3 -w5
```

<div id="auto_allow_hosts" class="registered_link"></div>

Use the `auto.allow.hosts` property to instruct the server to use the addresses specified in the .nodes file of the first node started to update the allowed host list. Enabling this property (setting `auto.allow.hosts` to true) can simplify cluster start-up.

```text
# Have the first node started automatically add the addresses
# from its .nodes file to the allowed host list. This will make
# it faster to start the cluster when the initial set of hosts
# is already known.
auto.allow.hosts=false
```

<div id="stable_nodes_file" class="registered_link"></div>

Use the `stable.nodes.file` property to instruct the server to not rewrite the nodes file when a node joins or leaves the cluster. This property is most useful in clusters with unchanging IP addresses.

```text
# When set to true, EFM will not rewrite the .nodes file whenever
# new nodes join or leave the cluster. This can help starting a
# cluster in the cases where it is expected for member addresses
# to be mostly static, and combined with 'auto.allow.hosts' makes
# startup easier when learning failover manager.
stable.nodes.file=false
```

<div id="db_reuse_connection_count" class="registered_link"></div>

The `db.reuse.connection.count` property allows the administrator to specify the number of times Failover Manager reuses the same database connection to check the database health. The default value is 0, indicating that Failover Manager will create a fresh connection each time. This property is not required on a dedicated witness node.

```text
# This property controls how many times a database connection is
# reused before creating a new one. If set to zero, a new
# connection will be created every time an agent pings its local
# database.
db.reuse.connection.count=0
```

<div id="auto_failover" class="registered_link"></div>

The `auto.failover` property enables automatic failover. By default, auto.failover is set to true.

```text
# Whether or not failover will happen automatically when the primary
# fails. Set to false if you want to receive the failover notifications
# but not have EFM actually perform the failover steps.
# The value of this property must be the same across all agents.
auto.failover=true
```

<div id="auto_reconfigure" class="registered_link"></div>

Use the `auto.reconfigure` property to instruct Failover Manager to enable or disable automatic reconfiguration of remaining Standby servers after the primary standby is promoted to Primary. Set the property to `true` to enable automatic reconfiguration (the default) or `false` to disable automatic reconfiguration. This property is not required on a dedicated witness node. If you are using Advanced Server or PostgreSQL version 11 or earlier, the `recovery.conf` file will be backed up during the reconfiguration process.

```text
# After a standby is promoted, Failover Manager will attempt to
# update the remaining standbys to use the new primary. For database
# versions before 12, Failover Manager will back up recovery.conf.
# Then it will change the host parameter of the primary_conninfo entry
# in recovery.conf or postgresql.auto.conf, and restart the database.
# The restart command is contained in either the efm_db_functions or
# efm_root_functions file; default when not running db as an os
# service is: "pg_ctl restart -m fast -w -t <timeout> -D <directory>"
# where the timeout is the local.timeout property value and the
# directory is specified by db.data.dir. To turn off
# automatic reconfiguration, set this property to false.
auto.reconfigure=true
```

!!! Note
    `primary_conninfo` is a space-delimited list of keyword=value pairs.

<div id="promotable" class="registered_link"></div>

Use the `promotable` property to indicate that a node should not be promoted. The `promotable` property is ignored when a primary agent is started. This simplifies switching back to the original primary after a switchover or failover. To override the setting, use the efm set-priority command at runtime; for more information about the efm set-priority command, see [Using the efm Utility](../../07_using_efm_utility/#using_efm_utility).

```text
# A standby with this set to false will not be added to the
# failover priority list, and so will not be available for
# promotion. The property will be used whenever an agent starts
# as a standby or resumes as a standby after being idle. After
# startup/resume, the node can still be added or removed from the
# priority list with the 'efm set-priority' command. This
# property is required for all non-witness nodes.
promotable=true
```

<div id="use_replay_tiebreaker" class="registered_link"></div>

If the same amount of data has been written to more than one standby node, and a failover occurs, the `use.replay.tiebreaker` value will determine how Failover Manager selects a replacement primary. Set the `use.replay.tiebreaker` property to `true` to instruct Failover Manager to failover to the node that will come out of recovery faster, as determined by the log sequence number. To ignore the log sequence number and promote a node based on user preference, set `use.replay.tiebreaker` to `false`.

```text
# Use replay LSN value for tiebreaker when choosing a standby to
# promote before using failover priority. Set this property to true to
# consider replay location as more important than failover priority
# (as seen in cluster-status command) when choosing the "most ahead"
# standby to promote.
use.replay.tiebreaker=true
```

<div id="standby_restart_delay" class="registered_link"></div>

Use the `standby.restart.delay` property to specify the time in seconds that the standby should wait before it gets reconfigured (stopped/started) to follow the new primary after a promotion.

```text
# Time in seconds for this standby to delay restarting to follow the
# primary after a promotion. This can be used to have standbys restart
# at different times to increase availability. Caution should be used
# when using this feature, as a delayed standby will not be following
# the new primary and care must be taken that the new primary retains
# enough WAL for the standby to follow it.
# Please see the user's guide for more information.
standby.restart.delay=0
```

<div id="application_name" class="registered_link"></div>

You can use the `application.name` property to provide the name of an application that will be copied to the `primary_conninfo` parameter before restarting an old primary node as a standby.

```text
# During a switchover, recovery settings are copied from a standby
# to the original primary. If the application.name property is set,
# Failover Manager will replace the application_name portion of the
# primary_conninfo entry with this property value before starting
# the original primary database as a standby. If this property is
# not set, Failover Manager will remove the parameter value
# from primary_conninfo.
application.name=
```

!!! Note
    You should set the `application.name` property on the primary and any promotable standby; in the event of a failover/switchover, the primary node could potentially become a standby node again.

<div id="restore_command" class="registered_link"></div>

Use the `restore.command` property to instruct Failover Manager to update the `restore_command` when a new primary is promoted. `%h` represents the address of the new primary; Failover Manager will replace `%h` with the address of the new primary. `%f` and `%p` are placeholders used by the server. If the property is left blank, Failover Manager will not update the `restore_command` values on the standbys after a promotion.

See the PostgreSQL documentation for more information about using a [restore_command](https://www.postgresql.org/docs/current/runtime-config-wal.html#RUNTIME-CONFIG-WAL-ARCHIVE-RECOVERY).

```text
# If the restore_command on a standby restores directly from the
# primary node, use this property to have Failover Manager change
# the command when a new primary is promoted.
#
# Use the %h placeholder to represent the address of the new primary.
# During promotion it will be replaced with the address of the new
# primary.
#
# If not specified, failover manager will not change the
# restore_command value, if any, on standby nodes.
#
# Example:
# restore.command=scp <db service owner>@%h:/var/lib/edb/as12/data/archive/%f %p
restore.command=
```

<div id="reconfigure_num_sync" class="registered_link"></div>

The database parameter `synchronous_standby_names` on the primary node specifies the names and count of the synchronous standby servers that will confirm receipt of data, to ensure that the primary nodes can accept write transactions. When `reconfigure.num.sync` property is set to true, Failover Manager will reduce the number of synchronous standby servers and reload the configuration of the primary node to reflect the current value.

```text
# Reduce num_sync when the number of synchronous standbys drops below
# the value required by the primary database. If set to true, Failover
# Manager will reduce the number of standbys needed in the primary's
# synchronous_standby_names property and reload the primary
# configuration. Failover Manager will not reduce the number below 1,
# taking the primary out of synchronous replication, unless the
# reconfigure.sync.primary property is also set to true.
# To raise num_sync, see the reconfigure.num.sync.max property below.
reconfigure.num.sync=false
```
!!! Note

    If you are using the `reconfigure.num.sync` property, ensure that the `wal_sender_timeout` in the primary database is set to at least ten seconds less than the `efm.node.timeout` value.


<div id="reconfigure_num_sync_max" class="registered_link"></div>

Use the `reconfigure.num.sync.max` property to specify the maximum number to which num-sync can be raised when a standby is added to the cluster.

```text
# If reconfigure.num.sync is set to true and this property is set,
# Failover Manager will check if num_sync can be raised when a standby
# is added to the cluster.
# Failover Manager will not raise the value above the maximum set here.
# If the primary database has been taken out of synchronous mode
# completely (see the reconfigure.sync.primary property), then Failover
# Manager will not reconfigure the primary database if standbys are
# added to the cluster.
reconfigure.num.sync.max=
```

<div id="reconfigure_sync_primary" class="registered_link"></div>

Set the `reconfigure.sync.primary` property to `true` to take the primary database out of synchronous replication mode if the number of standby nodes drops below the level required. Set `reconfigure.sync.primary` to `false` to send a notification if the standby count drops, but not interrupt synchronous replication.

```text
# Take the primary database out of synchronous replication mode when
# needed. If set to true, Failover Manager will clear the
# synchronous_standby_names configuration parameter on the primary
# if the number of synchronous standbys drops below the required
# level for the primary to accept writes.
# If set to false, Failover Manager will detect the situation but
# will only send a notification if the standby count drops below the
# required level.
#
# CAUTION: TAKING THE PRIMARY DATABASE OUT OF SYNCHRONOUS MODE MEANS
# THERE MAY ONLY BE ONE COPY OF DATA. DO NOT MAKE THIS CHANGE UNLESS
# YOU ARE SURE THIS IS OK.
reconfigure.sync.primary=false
```
!!! Note

    If you are using the `reconfigure.sync.primary` property, ensure that the `wal_sender_timeout` in the primary database is set to at least ten seconds less than the `efm.node.timeout` value.

<div id="minimum_standbys" class="registered_link"></div>

Use the `minimum.standbys` property to specify the minimum number of standby nodes that will be retained on a cluster; if the standby count drops to the specified minimum, a replica node will not be promoted in the event of a failure of the primary node.

```text
# Instead of setting specific standbys as being unavailable for
# promotion, this property can be used to set a minimum number
# of standbys that will not be promoted. Set to one, for
# example, promotion will not happen if it will drop the number
# of standbys below this value. This property must be the same on
# each node.
minimum.standbys=0
```

<div id="recovery_check_period" class="registered_link"></div>

Use the `recovery.check.period` property to specify the number of seconds that Failover Manager will wait before checks to see if a database is out of recovery.

```text
# Time in seconds between checks to see if a promoting database
# is out of recovery.
recovery.check.period=1
```

<div id="restart_connection_timeout" class="registered_link"></div>

Use the `restart.connection.timeout` property to specify the number of seconds that Failover Manager will attempt to connect to a newly reconfigured primary or standby node while the database on that node prepares to accept connections.

```text
# Time in seconds to keep trying to connect to a database after a
# start or restart command returns successfully but the database
# is not ready to accept connections yet (a rare occurance). This
# applies to standby databases that are restarted when being
# reconfigured for a new primary, and to primary databases that
# are stopped and started as standbys during a switchover.
# This retry mechanism is unrelated to the auto.resume.period
# parameter.
restart.connection.timeout=60
```

<div id="auto_resume_period" class="registered_link"></div>

Use the `auto.resume.period` property to specify the number of seconds (after a monitored database fails and an agent has assumed an idle state, or when starting in IDLE mode) during which an agent will attempt to resume monitoring that database.

```text
# Period in seconds for IDLE agents to try to resume monitoring
# after a database failure or when starting in IDLE mode. Set to
# 0 for agents to not try to resume (in which case the
# 'efm resume <cluster>' command is used after bringing a
# database back up).
auto.resume.period=0
```

<div id="virtual_ip" class="registered_link"></div>

Failover Manager provides support for clusters that use a virtual IP. If your cluster uses a virtual IP, provide the host name or IP address in the `virtual.ip` property; specify the corresponding prefix in the `virtual.ip.prefix` property. If `virtual.ip` is left blank, virtual IP support is disabled.

Use the `virtual.ip.interface` property to provide the network interface used by the VIP.

The specified virtual IP address is assigned only to the primary node of the cluster. If you specify `virtual.ip.single=true`, the same VIP address will be used on the new primary in the event of a failover. Specify a value of false to provide a unique IP address for each node of the cluster.

For information about using a virtual IP address, see [Using Failover Manager with Virtual IP Addresses](../05_using_vip_addresses/#using_vip_addresses).

```text
# These properties specify the IP and prefix length that will be
# remapped during failover. If you do not use a VIP as part of
# your failover solution, leave the virtual.ip property blank to
# disable Failover Manager support for VIP processing (assigning,
# releasing, testing reachability, etc).
#
# If you specify a VIP, the interface and prefix are required.
#
# If you specify a host name, it will be resolved to an IP address
# when acquiring or releasing the VIP. If the host name resolves
# to more than one IP address, there is no way to predict which
# address Failover Manager will use.
#
# By default, the virtual.ip and virtual.ip.prefix values must be
# the same across all agents. If you set virtual.ip.single to
# false, you can specify unique values for virtual.ip and
# virtual.ip.prefix on each node.
#
# If you are using an IPv4 address, the virtual.ip.interface value
# should not contain a secondary virtual ip id (do not include
# ":1", etc).
virtual.ip=
virtual.ip.interface=
virtual.ip.prefix=
virtual.ip.single=true
```

!!! Note
    If a primary agent is started and the node does not currently have the VIP, the EFM agent will acquire it. Stopping a primary agent does not drop the VIP from the node.

<div id="check_vip_before_promotion" class="registered_link"></div>

Set the `check.vip.before.promotion` property to false to indicate that Failover Manager will not check to see if a VIP is in use before assigning it to a a new primary in the event of a failure. Note that this could result in multiple nodes broadcasting on the same VIP address; unless the primary node is isolated or can be shut down via another process, you should set this property to true.

```text
# Whether to check if the VIP (when used) is still in use before
# promoting after a primary failure. Turning this off may allow
# the new primary to have the VIP even though another node is also
# broadcasting it. This should only be used in environments where
# it is known that the failed primary node will be isolated or
# shut down through other means.
check.vip.before.promotion=true
```

<div id="pgpool_enable" class="registered_link"></div>

Use the `pgpool.enable` property to specify if you want to enable the Failover Manager and Pgpool integration for high availability. You must have sudo access to enable the Pgpool integration.

```text
# A boolean property to enable Failover Manager managed Pgpool HA.
# If enabled, Failover Manager would natively update the joining
# and leaving status of database nodes to active pgpool instance.
# Failover manager expects properly configured and running pgpool
# instances on required nodes. It does not manage setup and
# configuration of pgpool on any node.
#
# By default the property is disabled.
pgpool.enable=false
```

Use the following parameters to specify the values that should be used for Pgpool integration.

```text
# Configurations required for pgpool integration.
# 'pcp.user' - User that would be invoking PCP commands
# 'pcp.host' - Virtual IP that would be used by pgpool. Same as
# pgpool parameter 'delegate_IP'
# 'pcp.port' - The port on which pgpool listens for pcp commands.
# 'pcp.pass.file' - Absolute path of PCPPASSFILE.
# 'pgpool.bin' - Absolute path of pgpool bin directory

# These properties are required if 'pgpool.enable' is set to true.
pcp.user=
pcp.host=
pcp.port=
pcp.pass.file=
pgpool.bin=
```

<div id="script_load_balancer" class="registered_link"></div>

Use the following properties to provide paths to scripts that reconfigure your load balancer in the event of a switchover or primary failure scenario. The scripts will also be invoked in the event of a standby failure. If you are using these properties, they should be provided on every node of the cluster (primary, standby, and witness) to ensure that if a database node fails, another node will call the detach script with the failed node's address.

You do not need to set the below properties if you are using Pgpool as Load Balancer solution and have set the Pgpool integration properties.

Provide a script name after the `script.load.balancer.attach` property to identify a script that will be invoked when a node should be attached to the load balancer. Use the `script.load.balancer.detach` property to specify the name of a script that will be invoked when a node should be detached from the load balancer. Include the `%h` placeholder to represent the IP address of the node that is being attached or removed from the cluster. Include the `%t` placeholder to instruct Failover Manager to include an p (for a primary node) or an s (for a standby node) in the string.

```text
# Absolute path to load balancer scripts
# The attach script is called when a node should be attached to
# the load balancer, for example after a promotion. The detach
# script is called when a node should be removed, for example
# when a database has failed or is about to be stopped. Use %h to
# represent the IP/hostname of the node that is being
# attached/detached. Use %t to represent the type of node being
# attached or detached: the letter m will be passed in for primary nodes
#and the letter s for standby nodes.
#
# Example:
# script.load.balancer.attach=/somepath/attachscript %h %t
script.load.balancer.attach=
script.load.balancer.detach=
```

<div id="script_fence" class="registered_link"></div>

`script.fence` specifies the path to an optional user-supplied script that will be invoked during the promotion of a standby node to primary node.

```text
# absolute path to fencing script run during promotion
#
# This is an optional user-supplied script that will be run
# during failover on the standby database node. If left blank,
# no action will be taken. If specified, EFM will execute this
# script before promoting the standby.
#
# Parameters can be passed into this script for the failed primary
# and new primary node addresses. Use %p for new primary and %f
# for failed primary. On a node that has just been promoted, %p
# should be the same as the node's efm binding address.
#
# Example:
# script.fence=/somepath/myscript %p %f
#
# NOTE: FAILOVER WILL NOT OCCUR IF THIS SCRIPT RETURNS A NON-ZERO EXIT
# CODE.
script.fence=
```

<div id="script_post_promotion" class="registered_link"></div>

Use the `script.post.promotion` property to specify the path to an optional user-supplied script that will be invoked after a standby node has been promoted to primary.

```text
# Absolute path to fencing script run after promotion
#
# This is an optional user-supplied script that will be run after
# failover on the standby node after it has been promoted and
# is no longer in recovery. The exit code from this script has
# no effect on failover manager, but will be included in a
# notification sent after the script executes.
#
# Parameters can be passed into this script for the failed primary
# and new primary node addresses. Use %p for new primary and %f
# for failed primary. On a node that has just been promoted, %p
# should be the same as the node's efm binding address.
#
# Example:
# script.post.promotion=/somepath/myscript %f %p
script.post.promotion=
```

<div id="script_resumed" class="registered_link"></div>

Use the `script.resumed property` to specify an optional path to a user-supplied script that will be invoked when an agent resumes monitoring of a database.

```text
# Absolute path to resume script
#
# This script is run before an IDLE agent resumes
# monitoring its local database.
script.resumed=
```

<div id="script_db_failure" class="registered_link"></div>

Use the `script.db.failure` property to specify the complete path to an optional user-supplied script that Failover Manager will invoke if an agent detects that the database that it monitors has failed.

```text
# Absolute path to script run after database failure
# This is an optional user-supplied script that will be run after
# an agent detects that its local database has failed.
script.db.failure=
```

<div id="script_primary_isolated" class="registered_link"></div>

Use the `script.primary.isolated` property to specify the complete path to an optional user-supplied script that Failover Manager will invoke if the agent monitoring the primary database detects that the primary is isolated from the majority of the Failover Manager cluster. This script is called immediately after the VIP is released (if a VIP is in use).

```text
# Absolute path to script run on isolated primary
# This is an optional user-supplied script that will be run after
# a primary agent detects that it has been isolated from the
# majority of the efm cluster.
script.primary.isolated=
```

<div id="script_remote_pre_promotion" class="registered_link"></div>

Use the `script.remote.pre.promotion` property to specify the path and name of a script that will be invoked on any agent nodes not involved in the promotion when a node is about to promote its database to primary.

Include the %p placeholder to identify the address of the new primary node.

```text
# Absolute path to script invoked on non-promoting agent nodes
# before a promotion.
#
# This optional user-supplied script will be invoked on other
# agents when a node is about to promote its database. The exit
# code from this script has no effect on Failover Manager, but
# will be included in a notification sent after the script
# executes.
#
# Pass a parameter (%p) with the script to identify the new
# primary node address.
#
# Example:
# script.remote.pre.promotion=/path_name/script_name %p
script.remote.pre.promotion=
```

<div id="script_remote_post_promotion" class="registered_link"></div>

Use the `script.remote.post.promotion` property to specify the path and name of a script that will be invoked on any non-primary nodes after a promotion occurs.

Include the %p placeholder to identify the address of the new primary node.

```text
# Absolute path to script invoked on non-primary agent nodes
# after a promotion.
#
# This optional user-supplied script will be invoked on nodes
# (except the new primary) after a promotion occurs. The exit code
# from this script has no effect on Failover Manager, but will be
# included in a notification sent after the script executes.
#
# Pass a parameter (%p) with the script to identify the new
# primary node address.
#
# Example:
# script.remote.post.promotion=/path_name/script_name %p
script.remote.post.promotion=
```

<div id="script_custom_monitor" class="registered_link"></div>

Use the `script.custom.monitor` property to provide the name and location of an optional script that will be invoked on regular intervals (specified in seconds by the `custom.monitor.interval` property).

Use `custom.monitor.timeout` to specify the maximum time that the script will be allowed to run; if script execution does not complete within the time specified, Failover Manager will send a notification.

Set `custom.monitor.safe.mode` to `true` to instruct Failover Manager to report non-zero exit codes from the script, but not promote a standby as a result of an exit code.

```text
# Absolute path to a custom monitoring script.
#
# Use script.custom.monitor to specify the location and name of
# an optional user-supplied script that will be invoked
# periodically to perform custom monitoring tasks. A non-zero
# exit value means that a check has failed; this will be treated
# as a database failure. On a primary node, script failure will
# cause a promotion. On a standby node script failure will
# generate a notification and the agent will become IDLE.
#
# The custom.monitor.\* properties are required if a custom
# monitoring script is specified:
#
# custom.monitor.interval is the time in seconds between executions
# of the script.
#
# custom.monitor.timeout is a timeout value in seconds for how
# long the script will be allowed to run. If script execution
# exceeds the specified time, the task will be stopped and a
# notification sent. Subsequent runs will continue.
#
# If custom.monitor.safe.mode is set to true, non-zero exit codes
# from the script will be reported but will not cause a promotion
# or be treated as a database failure. This allows testing of the
# script without affecting EFM.
#
script.custom.monitor=
custom.monitor.interval=
custom.monitor.timeout=
custom.monitor.safe.mode=
```

<div id="sudo_command" class="registered_link"></div>

Use the `sudo.command` property to specify a command that will be invoked by Failover Manager when performing tasks that require extended permissions. Use this option to include command options that might be specific to your system authentication.

Use the `sudo.user.command` property to specify a command that will be invoked by Failover Manager when executing commands that will be performed by the database owner.

```text
# Command to use in place of 'sudo' if desired when efm runs
# the efm_db_functions or efm_root_functions, or efm_address
# scripts.
# Sudo is used in the following ways by efm:
#
# sudo /usr/edb/efm-<version>/bin/efm_address <arguments>
# sudo /usr/edb/efm-<version>/bin/efm_root_functions <arguments>
# sudo -u <db service owner> /usr/edb/efm-<version>/bin/efm_db_functions <arguments>
#
# 'sudo' in the first two examples will be replaced by the value
# of the sudo.command property. 'sudo -u <db service owner>' will
# be replaced by the value of the sudo.user.command property.
# The '%u' field will be replaced with the db owner.
sudo.command=sudo
sudo.user.command=sudo -u %u
```

<div id="lock_dir" class="registered_link"></div>

Use the `lock.dir` property to specify an alternate location for the Failover Manager lock file; the file prevents Failover Manager from starting multiple (potentially orphaned) agents for a single cluster on the node.

```text
# Specify the directory of lock file on the node. Failover
# Manager creates a file named <cluster>.lock at this location to
# avoid starting multiple agents for same cluster. If the path
# does not exist, Failover Manager will attempt to create it. If
# not specified defaults to '/var/lock/efm-<version>'
lock.dir=
```

<div id="log_dir" class="registered_link"></div>

Use the `log.dir` property to specify the location to which agent log files will be written; Failover Manager will attempt to create the directory if the directory does not exist.

```text
# Specify the directory of agent logs on the node. If the path
# does not exist, Failover Manager will attempt to create it. If
# not specified defaults to '/var/log/efm-<version>'. (To store
# Failover Manager startup logs in a custom location, modify the
# path in the service script to point to an existing, writable
# directory.)
# If using a custom log directory, you must configure
# logrotate separately. Use 'man logrotate' for more information.
log.dir=
```

<div id="syslog_logging" class="registered_link"></div>

After enabling the UDP or TCP protocol on a Failover Manager host, you can enable logging to syslog. Use the `syslog.protocol` parameter to specify the protocol type (UDP or TCP) and the `syslog.port` parameter to specify the listener port of the syslog host. The `syslog.facility` value may be used as an identifier for the process that created the entry; the value must be between LOCAL0 and LOCAL7.

```text
# Syslog information. The syslog service must be listening on
# the port for the given protocol, which can be UDP or TCP.
# The facilities supported are LOCAL0 through LOCAL7.
syslog.host=localhost
syslog.port=514
syslog.protocol=UDP
syslog.facility=LOCAL1
```

<div id="logtype_enabled" class="registered_link"></div>

Use the `file.log.enabled` and `syslog.enabled` properties to specify the type of logging that you wish to implement. Set `file.log.enabled` to `true` to enable logging to a file; enable the UDP protocol or TCP protocol and set `syslog.enabled` to `true` to enable logging to syslog. You can enable logging to both a file and syslog.

```text
# Which logging is enabled.
file.log.enabled=true
syslog.enabled=false
```

For more information about configuring syslog logging, see [Enabling syslog Log File Entries](../../09_controlling_logging/#enabling_syslog).

<div id="loglevel" class="registered_link"></div>

Use the `jgroups.loglevel` and `efm.loglevel` parameters to specify the level of detail logged by Failover Manager. The default value is INFO. For more information about logging, see [Controlling Logging](../../09_controlling_logging/#controlling_logging).

```text
# Logging levels for JGroups and EFM.
# Valid values are: TRACE, DEBUG, INFO, WARN, ERROR
# Default value: INFO
# It is not necessary to increase these values unless debugging a
# specific issue. If nodes are not discovering each other at
# startup, increasing the jgroups level to DEBUG will show
# information about the TCP connection attempts that may help
# diagnose the connection failures.
jgroups.loglevel=INFO
efm.loglevel=INFO
```

<div id="jvm_options" class="registered_link"></div>

Use the `jvm.options` property to pass JVM-related configuration information. The default setting specifies the amount of memory that the Failover Manager agent will be allowed to use.

```text
# Extra information that will be passed to the JVM when starting
# the agent.
jvm.options=-Xmx128m
```

<div class="toctree" maxdepth="3">

encrypting_database_password

</div>
